fix(main.css): Mouse pointer not showing when hovering on buttons

--- a/src/genshin_impact/css/main.css
+++ b/src/genshin_impact/css/main.css
@@ -61,6 +61,7 @@ header {
 
 .hc_btn_wrapper > button:hover {
     background-color: rgb(121, 121, 121);
+    cursor: pointer;
 }
 
 footer {
