--- a/src/zenless_zone_zero/css/main.css
+++ b/src/zenless_zone_zero/css/main.css
@@ -65,6 +65,7 @@ header {
 
 .hc_btn_wrapper > button:hover {
     background-color: rgb(121, 121, 121);
+    cursor: pointer;
 }
 
 footer {
